Fixed .text-white in faqs section to align with mockup

--- a/css/less/components/base.less
+++ b/css/less/components/base.less
@@ -108,13 +108,15 @@ section{
 .sec-faqs{
    background: @brand-warning;
    min-height: 0;
-   .text-white();
    .section-overlay{
       position: static;
    }
    h1{
       margin-top: 31px;
       margin-bottom: 31px;
+   }
+   p{
+      .text-white();
    }
    .btn-faqs{
       margin-top: 39px;
